[gd_scene load_steps=5 format=3 uid="uid://r5myb2b067sp"]

[ext_resource type="Texture2D" uid="uid://bn8cb56tt82dt" path="res://Source/El Gambas/ice_spik.png" id="1_iivwq"]
[ext_resource type="Script" path="res://Scripts/spik.gd" id="1_xjre3"]
[ext_resource type="Material" uid="uid://cy7ggo1p01fji" path="res://Scripts/invisible.tres" id="2_tyh3r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_psipr"]
size = Vector2(13, 14)

[node name="IceSpik" type="Area2D"]
script = ExtResource("1_xjre3")

[node name="Spik" type="Sprite2D" parent="."]
light_mask = 2
material = ExtResource("2_tyh3r")
position = Vector2(-1, -58)
texture = ExtResource("1_iivwq")
hframes = 10
frame = 5

[node name="grand" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -7)
shape = SubResource("RectangleShape2D_psipr")

[node name="TimerSpikUp" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="TimerSpikDown" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="timeout" from="TimerSpikUp" to="." method="_on_timer_spik_up_timeout"]
[connection signal="timeout" from="TimerSpikDown" to="." method="_on_timer_spik_down_timeout"]
